# rust-ml-frameworks-benchmarks

./: .gitignore  Cargo.toml  Dockerfile  README.md  pyproject.toml  run_benchmarks.py  visualize_results.py
.github/workflows/: benchmarks.yml
burn-example/: Cargo.toml
burn-example/benches/: model.rs
burn-example/src/: lib.rs  main.rs
candle-example/: Cargo.toml
candle-example/benches/: model.rs
candle-example/src/: lib.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
exports/2026-03-27_11-50-27/: benchmark_metrics.csv  convergence_data.csv  summary.csv
tch-example/: Cargo.toml
tch-example/benches/: model.rs
tch-example/src/: lib.rs  main.rs  tch_model.rs
