[package]
name = "burn-example"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.20.1", features = ["train", "dataset"] }
burn-fusion = "0.20"
common = { path = "../common" }
criterion = "0.8.2"


[features]
default = []
ndarray = ["burn/ndarray"]
ndarray-openblas = ["burn/ndarray", "burn/openblas-system"]
ndarray-simd = ["burn/ndarray", "burn/simd"]


[[bench]]
name = "model"
harness = false
